Style.css
body {
    margin: 0;
    padding: 0;
    display: grid;
    grid-template-columns: 1fr 2fr 1fr 2fr 1fr;
    background-color: #303030;
    color: white;
}

h1 {
    color: white;
    padding-left: 25px;
}

header, footer {
    grid-column-start: 1;
    grid-column-end: 6;
    background-color: #424242;
}

.Spacer {
    grid-column-start: 1;
    grid-column-end: 6;
    height: 100px;
}

#SP, #Coop {
    display: grid;
    grid-template-columns: 2fr auto auto;
    column-gap: 20px;
    background-color: #424242;
    border-radius: 10px;
    height: fit-content;
    padding: 20px;
}

#SP h1, #Coop h1 {
    grid-column-start: 1;
    grid-column-end: 4;
    text-align: center;
}

#SP {
    grid-column: 2;
}

#Coop {
    grid-column: 4;
}

.Top5000Label {
    text-align: center;
}

.WrTie {
    height: 20pt;
}

footer p {
    color: white;
    padding-left: 25px;
}

a {
    color: lightblue;
}

/* Use max-device-width to be ably to use viewport-size */
/* Getting viewport from https://yesviz.com/viewport/ or https://www.mydevice.io/ */
@media screen and (max-device-width: 360px) {
    body {
        grid-template-columns: 1fr 2fr 1fr;
        row-gap: 100px;
    }

    .Spacer {
        display: none;
    }

    #Coop {
        grid-column: 2;
    }
}

